--- a/index.html
+++ b/index.html
@@ -1,165 +1,116 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta property="og:title" content="M3 Gücüyle Üretildi! 🔥">
-<meta property="og:description" content="iPhone tarzı switch ile karanlık mod deneyimi.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M3 Pro Geliştirici Sayfası</title>
+    <title>SO_ACCESSORY | Premium Collection</title>
     <style>
-        /* GENEL TASARIM */
+        :root {
+            --accent-blue: #0071e3;
+            --bg-gray: #e5e5e7;
+        }
+
         body {
-            background-color: #f5f5f7;
+            background: radial-gradient(circle at center, #ffffff 0%, #d2d2d7 100%);
+            background-attachment: fixed;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            margin: 0; padding: 0;
             color: #1d1d1f;
-            padding: 50px;
-            line-height: 1.6;
-            transition: background-color 0.4s, color 0.4s;
+            min-height: 100vh;
         }
 
-        /* KARANLIK TEMA (JS ile tetiklenecek) */
-        .karanlik-tema {
-            background-color: #1d1d1f !important;
-            color: #f5f5f7 !important;
-        }
-
-        .karanlik-tema .kart {
-            background-color: #2c2c2e !important;
-            color: white !important;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-        }
-
-        /* iPHONE TARZI SWITCH (TOGGLE) */
-        .switch-konteynir {
+        header {
+            padding: 15px 5%;
             display: flex;
+            justify-content: space-between;
             align-items: center;
-            gap: 15px;
-            margin-bottom: 30px;
-            padding: 10px;
-            background: rgba(0,0,0,0.05);
-            width: fit-content;
-            border-radius: 50px;
+            background: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(20px);
+            position: sticky; top: 0; z-index: 1000;
+            border-bottom: 1px solid rgba(0,0,0,0.1);
         }
 
-        .switch {
-            position: relative;
-            display: inline-block;
-            width: 50px;
-            height: 28px;
+        .logo-container { display: flex; align-items: center; gap: 10px; }
+        .logo-img { width: 40px; height: 40px; border-radius: 10px; object-fit: cover; }
+        .logo-text { font-weight: 800; font-size: 1.2rem; }
+
+        .hero { text-align: center; padding: 50px 20px; }
+        .hero h1 { font-size: 3rem; margin-bottom: 10px; letter-spacing: -2px; }
+
+        .urun-konteynir {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 25px; padding: 20px 5% 80px;
         }
 
-        .switch input { opacity: 0; width: 0; height: 0; }
-
-        .slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0; left: 0; right: 0; bottom: 0;
-            background-color: #ccc;
-            transition: .4s;
-            border-radius: 34px;
+        .urun-kart {
+            background: rgba(255, 255, 255, 0.5);
+            backdrop-filter: blur(10px);
+            border-radius: 30px; padding: 20px;
+            text-align: center; border: 1px solid rgba(255,255,255,0.3);
+            transition: 0.3s;
         }
 
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 20px;
-            width: 20px;
-            left: 4px;
-            bottom: 4px;
-            background-color: white;
-            transition: .4s;
-            border-radius: 50%;
+        .urun-kart:hover { transform: translateY(-10px); background: rgba(255, 255, 255, 0.8); }
+
+        .resim-cerceve {
+            width: 100%; height: 250px; border-radius: 20px;
+            background: white; margin-bottom: 15px; overflow: hidden;
         }
 
-        input:checked + .slider { background-color: #34c759; }
-        input:checked + .slider:before { transform: translateX(22px); }
+        .resim-cerceve img { width: 100%; height: 100%; object-fit: contain; }
 
-        /* GÖRSEL ÖĞELER */
-        h1 { color: #0071e3; font-size: 2.5rem; }
-        
-        .kart-konteynir {
-            display: flex;
-            gap: 20px;
-            margin: 30px 0;
-        }
+        .fiyat { font-size: 1.5rem; font-weight: 800; display: block; margin: 15px 0; color: var(--accent-blue); }
 
-        .kart {
-            background: white;
-            padding: 25px;
-            border-radius: 20px;
-            flex: 1;
-            text-align: center;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-            transition: transform 0.3s;
-        }
-
-        .kart:hover { transform: translateY(-5px); }
-        .kart h3 { color: #ff3b30; margin-bottom: 10px; }
-
-        img {
-            width: 100%;
-            max-width: 600px;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-        }
-
-        a {
-            display: inline-block;
-            margin-top: 20px;
-            color: #0071e3;
-            text-decoration: none;
-            font-weight: bold;
+        .satin-al-btn {
+            background: #1d1d1f; color: white; text-decoration: none;
+            padding: 15px; border-radius: 15px; font-weight: 700; display: block;
         }
     </style>
 </head>
 <body>
 
-    <div class="switch-konteynir">
-        <span>☀️ Gündüz</span>
-        <label class="switch">
-            <input type="checkbox" id="mod-switch">
-            <span class="slider"></span>
-        </label>
-        <span>🌙 Gece</span>
-    </div>
-
-    <h1>Selam Dünya! 🚀</h1>
-    <p>M3 MacBook canavarıyla kod evrenine giriş yaptım. Her şey çok akıcı!</p>
-
-    <div class="kart-konteynir">
-        <div class="kart">
-            <h3>⚡ Hız</h3>
-            <p>M3 çipi ile her şey ışık hızında.</p>
+    <header>
+        <div class="logo-container">
+            <img src="logo.jpeg" alt="Logo" class="logo-img">
+            <div class="logo-text">SO_ACCESSORY</div>
         </div>
-        <div class="kart">
-            <h3>🎨 Tasarım</h3>
-            <p>iOS estetiğini web siteme taşıdım.</p>
+        <div style="font-weight: bold; font-size: 0.8rem; color: #86868b;">PREMIUM STORE</div>
+    </header>
+
+    <section class="hero">
+        <h1>Işıltını Keşfet.</h1>
+        <p>Premium aksesuar ve tasarım kılıflar.</p>
+    </section>
+
+    <main class="urun-konteynir">
+        <div class="urun-kart">
+            <div class="resim-cerceve">
+                <img src="https://cdn.shopier.app/pictures_mid/SO_ACCESSORY_6066f6b707841ca996f55799cd597b8e.jpeg" alt="Kolye">
+            </div>
+            <h3>Zarif Tek Taş Kolye</h3>
+            <span class="fiyat">200 TL</span>
+            <a href="https://www.shopier.com/SO_ACCESSORY/38596162" target="_blank" class="satin-al-btn">Satın Al</a>
         </div>
-        <div class="kart">
-            <h3>🔥 Gelecek</h3>
-            <p>Yazılım öğrenmek en iyi yatırım.</p>
+
+        <div class="urun-kart">
+            <div class="resim-cerceve">
+                <img src="https://cdn.shopier.app/pictures_mid/SO_ACCESSORY_daafe5c82bb236edc4781ed0675d1f7a.jpeg" alt="Kılıf">
+            </div>
+            <h3>Papatya Desenli Kılıf</h3>
+            <span class="fiyat">350 TL</span>
+            <a href="https://www.shopier.com/SO_ACCESSORY/38129312" target="_blank" class="satin-al-btn">Satın Al</a>
         </div>
-    </div>
 
-    <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97" alt="Kod Yazarken">
-
-    <h2>Bugün Neler Başardım? ✅</h2>
-    <ul>
-        <li>HTML ile sayfa yapısını kurdum.</li>
-        <li>CSS ile iPhone tarzı "Toggle Switch" yaptım.</li>
-        <li>JavaScript ile canlı tema değişikliği ekledim.</li>
-    </ul>
-
-    <a href="https://developer.apple.com" target="_blank">Apple Developer Dokümanlarını İncele →</a>
-
-    <script>
-        const modSwitch = document.getElementById('mod-switch');
-        const govde = document.body;
-
-        modSwitch.addEventListener('change', () => {
-            govde.classList.toggle('karanlik-tema');
-        });
-    </script>
+        <div class="urun-kart">
+            <div class="resim-cerceve">
+                <img src="https://images.unsplash.com/photo-1535632066927-ab7c9ab60908?auto=format&fit=crop&w=500" alt="Yüzük">
+            </div>
+            <h3>Vintage Altın Yüzük</h3>
+            <span class="fiyat">290 TL</span>
+            <a href="#" target="_blank" class="satin-al-btn">Satın Al</a>
+        </div>
+    </main>
 
 </body>
 </html>
